--- a/Code/Gaussian Inference DEF.ipynb
+++ b/Code/Gaussian Inference DEF.ipynb
@@ -69,8 +69,8 @@
     "\n",
     "xi_normal = np.random.rand(nneuron, 2) #[mu, sigma]\n",
     "#train_data = r[1:3000]\n",
-    "train_data = [r[1]]\n",
-    "actual = actual[1:3000]\n",
+    "train_data = r[1:100]\n",
+    "actual = actual[1:100]\n",
     "rho = .001\n",
     "rhoW = .001\n",
     "\n",
