--- a/Code/Gaussian Inference DEF.ipynb
+++ b/Code/Gaussian Inference DEF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 232,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
     "#nneuron = 41\n",
     "#sprefs = np.linspace(-60, 60, nneuron)\n",
     "\n",
-    "nneuron = 5\n",
+    "nneuron = 21\n",
     "sprefs = np.linspace(-20, 20, nneuron)\n",
     "\n",
     "sig0_sq      = float(3**2)\n",
@@ -69,25 +69,33 @@
     "\n",
     "xi_normal = np.random.rand(nneuron, 2) #[mu, sigma]\n",
     "#train_data = r[1:3000]\n",
-    "train_data = r[1:100]\n",
-    "actual = actual[1:100]\n",
+    "train_data = r[1:3000]\n",
+    "actual = actual[1:3000]\n",
     "rho = .001\n",
     "rhoW = .001\n",
+    "MeanSquare = [None] * L\n",
+    "for l in range(L):\n",
+    "    MeanSquare[l] = [None] * 2\n",
+    "    MeanSquare[l][0] = [None] * len(xi_normal)\n",
+    "    print MeanSquare[l][0]\n",
+    "    for m in range(len(MeanSquare[l][0])):\n",
+    "        MeanSquare[l][0][m] = [0] * 2  \n",
     "\n",
     "num = 1\n",
     "for i in range(len(train_data)):\n",
     "    n = train_data[i]\n",
     "    true = actual[i]\n",
     "    converged = False\n",
-    "    lam_normal = np.random.rand(1, 2)[0] * 3 #[mu, sigma]\n",
+    "    lam_normal = [0, 1] #[mu, sigma]\n",
+    "    MeanSquare[l][1] = [0] * 2\n",
     "    while not converged:\n",
     "        #normal\n",
     "        z_loc, z_scale = lam_normal\n",
     "        z[0] = np.random.normal(loc=z_loc, scale=z_scale, size=s)\n",
     "        W[0] = [None]*len(xi_normal)\n",
-    "        for i in range(len(xi_normal)):\n",
-    "            W_loc, W_scale = xi_normal[i]\n",
-    "            W[0][i] = np.random.normal(loc=W_loc, scale=W_scale, size=s).tolist()\n",
+    "        for w in range(len(xi_normal)):\n",
+    "            W_loc, W_scale = xi_normal[w]\n",
+    "            W[0][w] = np.random.normal(loc=W_loc, scale=W_scale, size=s).tolist()\n",
     "        p_z[0] = [None] * s\n",
     "        p_z[1] = [None] * s\n",
     "        q_z[0] = [None] * s\n",
@@ -133,16 +141,20 @@
     "        T = np.array(T)\n",
     "        g_Smu = np.mean(S[0, :, 0])\n",
     "        g_Ssigma = np.mean(S[0, :, 1])\n",
-    "        lam_normal[0] += rho * g_Smu\n",
-    "        lam_normal[1] += rho * g_Ssigma\n",
+    "        MeanSquare[0][1][0] = (.9 * MeanSquare[0][1][0]) + (.1 * (g_Smu ** 2))\n",
+    "        MeanSquare[0][1][1] = (.9 * MeanSquare[0][1][1]) + (.1 * (g_Ssigma ** 2))\n",
+    "        lam_normal[0] += rho * (1/np.sqrt(MeanSquare[0][1][0])) * g_Smu\n",
+    "        lam_normal[1] += rho * (1/np.sqrt(MeanSquare[0][1][1])) * g_Ssigma\n",
     "        lam_normal[1] = relu(lam_normal[1])\n",
     "        g_Tmu = [None] * len(xi_normal)\n",
     "        g_Tsigma = [None] * len(xi_normal)\n",
     "        for m in range(len(xi_normal)):\n",
     "            g_Tmu[m] = np.mean(T[0, :, m, 0])\n",
     "            g_Tsigma[m] = np.mean(T[0, :, m, 1])\n",
-    "            xi_normal[m][0] += rhoW * g_Tmu[m]\n",
-    "            xi_normal[m][1] += rhoW * g_Tsigma[m]\n",
+    "            MeanSquare[0][0][m][0] = (.9 * MeanSquare[0][0][m][0]) + (.1 * (g_Tmu[m] ** 2))\n",
+    "            MeanSquare[0][0][m][1] = (.9 * MeanSquare[0][0][m][1]) + (.1 * (g_Tsigma[m] ** 2))\n",
+    "            xi_normal[m][0] += rhoW * (1/np.sqrt(MeanSquare[0][0][m][0])) * g_Tmu[m]\n",
+    "            xi_normal[m][1] += rhoW * (1/np.sqrt(MeanSquare[0][0][m][1])) * g_Tsigma[m]\n",
     "            xi_normal[m][1] = relu(xi_normal[m][1])\n",
     "        num += 1\n",
     "        if num > 100:\n",
@@ -152,18 +164,28 @@
     "            print \"true\", true\n",
     "            print \"xi\", xi_normal\n",
     "            num = 1\n",
-    "            rhoW = rhoW * .9\n",
+    "            rhoW = rhoW * .99\n",
     "            rho = .001"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 237,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print len(xi_normal[0])"
+   ]
   },
   {
    "cell_type": "code",
