--- a/Code/DEF Code/Gaussian Inference DEF.ipynb
+++ b/Code/DEF Code/Gaussian Inference DEF.ipynb
@@ -18,7 +18,7 @@
    "version": "2.7.9"
   },
   "name": "",
-  "signature": "sha256:2b2ab8cf9dd67e148a2fec3cc1e1a9cf6f0683600f5a97d90bd25d94808ba847"
+  "signature": "sha256:51c5a27c890ea6794bbfcf81ecaea260d94ecc7c38e812912d8ca8a30c696c62"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -37,24 +37,30 @@
       "#nneuron = 41\n",
       "#sprefs = np.linspace(-60, 60, nneuron)\n",
       "\n",
-      "nneuron = 21\n",
-      "sprefs = np.linspace(-20, 20, nneuron)\n",
+      "nneuron = 3\n",
+      "sprefs = np.linspace(-3, 3, nneuron)\n",
       "\n",
       "sig0_sq      = float(3**2)\n",
       "sig1_sq      = float(12**2)\n",
-      "sigtc_sq     = float(10**2)\n",
+      "#sigtc_sq     = float(10**2)\n",
+      "sigtc_sq     = float(1.25**2)\n",
       "ndatapergain = 3000\n",
       "mu = 0\n",
       "gain = 15\n",
       "\n",
       "def generate_popcode_data(ndatapergain, nneuron, sig0_sq, sig1_sq, sigtc_sq, gain, noise):\n",
-      "    s = np.random.normal(mu, np.sqrt(sig0_sq), ndatapergain)\n",
+      "    s = np.random.normal(mu, 1, ndatapergain)\n",
       "    sprefs_data = np.tile(sprefs, (ndatapergain, 1))\n",
       "    r = gain * np.exp(-np.square((np.transpose(np.tile(s, (nneuron, 1))) - sprefs_data))/(2 * sigtc_sq))\n",
       "    if noise == \"poisson\":\n",
       "        r = np.random.poisson(r) + 0.0\n",
+      "    #questionable? does throwing out all 0 trials screw up training?\n",
+      "    r = r[~(np.sum(r, axis=1)==0)]\n",
+      "    s = s[~(np.sum(r, axis=1)==0)]\n",
       "    ar = np.sum(r, axis=1)/sigtc_sq\n",
-      "    br = np.sum(r*sprefs_data, axis=1)/sigtc_sq\n",
+      "    br = np.sum(r*sprefs_data[1:(len(r)+1)], axis=1)/sigtc_sq\n",
+      "    #without correction:\n",
+      "    #br = np.sum(r*sprefs_data, axis=1)/sigtc_sq\n",
       "    mean = br/ar\n",
       "    var = 1/ar\n",
       "    return r, s, mean, var\n",
@@ -70,19 +76,19 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "[[ 0.  1.  0. ...,  0.  0.  0.]\n",
-        " [ 1.  0.  1. ...,  1.  0.  0.]\n",
-        " [ 0.  1.  1. ...,  1.  0.  0.]\n",
+        "[[ 0.  0.  1.]\n",
+        " [ 0.  3.  0.]\n",
+        " [ 0.  1.  0.]\n",
         " ..., \n",
-        " [ 0.  0.  0. ...,  1.  0.  0.]\n",
-        " [ 0.  0.  0. ...,  0.  2.  0.]\n",
-        " [ 0.  0.  1. ...,  0.  0.  0.]]\n",
-        "[ 1.4        -3.          0.82352941 ...,  2.          5.5        -7.25      ]\n",
-        "[ 10.           7.14285714   5.88235294 ...,  11.11111111  12.5         12.5       ]\n"
+        " [ 0.  1.  0.]\n",
+        " [ 0.  1.  0.]\n",
+        " [ 0.  2.  0.]]\n",
+        "[ 3.  0.  0. ...,  0.  0.  0.]\n",
+        "[ 1.5625      0.52083333  1.5625     ...,  1.5625      1.5625      0.78125   ]\n"
        ]
       }
      ],
-     "prompt_number": 246
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -120,8 +126,8 @@
       "\n",
       "xi_normal = np.random.rand(nneuron, 2) * 10 - 5 #[mu, sigma]\n",
       "#train_data = r[1:3000]\n",
-      "train_data = r[1:3000]\n",
-      "actual = actual[1:3000]\n",
+      "train_data = r\n",
+      "actual = actual\n",
       "rho = .2\n",
       "rhoW = .2\n",
       "MeanSquare = [None] * L\n",
@@ -185,6 +191,7 @@
       "                T[l][t] = [None] * lenW\n",
       "                for j in range(lenW):\n",
       "                    gWlj = np.array(g_W[l][t][j])\n",
+      "                    print i, t, gWlj, z[l][t], W[l][t][j], r[i]\n",
       "                    #T[l][j] = gWlj * pzl #???\n",
       "                    T[l][t][j] = gWlj * p_z[l][t][j] #???\n",
       "                    T[l][t][j] = T[l][t][j].tolist()\n",
@@ -208,7 +215,8 @@
       "            xi_normal[m][1] += rhoW * (1/np.sqrt(MeanSquare[0][0][m][1])) * g_Tsigma[m]\n",
       "            xi_normal[m][1] = relu(xi_normal[m][1])\n",
       "        num += 1\n",
-      "        if num > 100:\n",
+      "        #if num > 100:\n",
+      "        if num > 3:\n",
       "            converged = True\n",
       "            print \"x\", n\n",
       "            print \"lambda\", lam_normal\n",
@@ -219,13 +227,50 @@
       "            print kl_div\n",
       "            print \"kl\", kl_div[i]\n",
       "            num = 1\n",
-      "            rhoW = rhoW * .99\n",
+      "            #rhoW = rhoW * .99\n",
+      "            rhoW = .2\n",
       "            rho = .2"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[[ 0.  3.  0.]\n",
+        " [ 0.  1.  0.]\n",
+        " [ 0.  1.  0.]\n",
+        " ..., \n",
+        " [ 0.  2.  0.]\n",
+        " [ 0.  1.  1.]\n",
+        " [ 0.  1.  0.]]\n",
+        "[ 0.   0.   0.  ...,  0.   1.5  0. ]\n",
+        "[ 0.52083333  1.5625      1.5625     ...,  0.78125     0.78125     1.5625    ]\n",
+        "0 0 [-2.21103372 -2.81470084] 1.11563730446 1.56259639404 [ 0.  3.  0.]\n",
+        "0 0 [ -5.67853344 -25.35705248] 1.11563730446 1.351386076 [ 0.  3.  0.]\n",
+        "0 0 [ -1.30810017e-15   1.21358554e+00] 1.11563730446 3.91590175821 [ 0.  3.  0.]\n",
+        "0 1 [-2.52210213 -4.02790668] 0.0657682145993 -0.791778676437 [ 0.  3.  0.]\n",
+        "0 1 [ -5.67853344 -25.35705248] 0.0657682145993 -0.791778676437 [ 0.  3.  0.]\n",
+        "0 1 [  6.54050084e-16   1.21358554e+00] 0.0657682145993 -0.791778676437 [ 0.  3.  0.]\n",
+        "0 2 [ 1.25489056 -0.08401588] 0.341819419264 3.063851786 [ 0.  3.  0.]\n",
+        "0 2 [ -5.67853344 -25.35705248] 0.341819419264 3.063851786 [ 0.  3.  0.]\n",
+        "0 2 [  3.27025042e-15   1.21358554e+00] 0.341819419264 3.063851786 [ 0.  3.  0.]\n",
+        "0 3 [ 2.64049131 -4.53153429] 0.215767325225"
+       ]
+      },
+      {
+       "ename": "IndexError",
+       "evalue": "list index out of range",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-10-64cae260c353>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     96\u001b[0m                 \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlenW\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     97\u001b[0m                     \u001b[0mgWlj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mg_W\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 98\u001b[0;31m                     \u001b[0;32mprint\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgWlj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mz\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mW\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     99\u001b[0m                     \u001b[0;31m#T[l][j] = gWlj * pzl #???\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    100\u001b[0m                     \u001b[0mT\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgWlj\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mp_z\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m#???\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+       ]
+      }
+     ],
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
