--- a/Code/Demixing DNN.ipynb
+++ b/Code/Demixing DNN.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:2a27b2dbfbc1e71514b7ce54e4b1a1b8fbfc1812b9fde0af5dcabb562d909ba6"
+  "signature": "sha256:ee3d0fd9e625e16094c9e912a646a4ddad071474911b946f730dd976039c4e69"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -47,7 +47,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -68,8 +68,8 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "[[ 0.84462208  2.99038681]]\n",
-        "[ 47.]\n",
+        "[[ 1.11212213  2.23290869]]\n",
+        "[ 43.]\n",
         "[ 0.          0.05235988  0.10471976  0.15707963  0.20943951  0.26179939\n",
         "  0.31415927  0.36651914  0.41887902  0.4712389   0.52359878  0.57595865\n",
         "  0.62831853  0.68067841  0.73303829  0.78539816  0.83775804  0.89011792\n",
@@ -91,56 +91,18 @@
         "  5.65486678  5.70722665  5.75958653  5.81194641  5.86430629  5.91666616\n",
         "  5.96902604  6.02138592  6.0737458   6.12610567  6.17846555  6.23082543\n",
         "  6.28318531]\n",
-        "[ 1.  0.  0.  0.  2.  0.  1.  0.  1.  1.  0.  2.  0.  0.  2.  2.  0.  1.\n",
-        "  0.  1.  1.  2.  1.  2.  0.  1.  0.  0.  0.  0.  1.  0.  0.  0.  0.  0.\n",
-        "  1.  0.  1.  2.  1.  2.  0.  0.  0.  0.  0.  0.  0.  1.  1.  0.  0.  1.\n",
-        "  0.  1.  0.  0.  1.  2.  0.  2.  0.  0.  0.  1.  1.  0.  0.  0.  0.  1.\n",
-        "  1.  0.  0.  1.  1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
-        "  0.  1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
-        "  0.  0.  0.  0.  0.  0.  0.  0.  1.  0.  0.  1.  0.]\n",
-        "[ 0.84462208  2.99038681]\n"
+        "[ 0.  0.  0.  1.  0.  2.  0.  1.  1.  0.  0.  1.  1.  0.  0.  1.  1.  0.\n",
+        "  1.  2.  2.  0.  0.  0.  3.  2.  2.  0.  2.  3.  1.  1.  0.  0.  0.  0.\n",
+        "  0.  0.  1.  1.  0.  0.  2.  3.  1.  0.  1.  0.  0.  0.  1.  1.  1.  0.\n",
+        "  0.  1.  0.  1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  1.  0.\n",
+        "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+        "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+        "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+        "[ 1.11212213  2.23290869]\n"
        ]
       }
      ],
-     "prompt_number": 2
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "import pystan\n",
-      "schools_code = \"\"\"\n",
-      "data {\n",
-      "    int<lower=0> J; // number of schools\n",
-      "    real y[J]; // estimated treatment effects\n",
-      "    real<lower=0> sigma[J]; // s.e. of effect estimates\n",
-      "}\n",
-      "parameters {\n",
-      "    real mu;\n",
-      "    real<lower=0> tau;\n",
-      "    real eta[J];\n",
-      "}\n",
-      "transformed parameters {\n",
-      "    real theta[J];\n",
-      "    for (j in 1:J)\n",
-      "        theta[j] <- mu + tau * eta[j];\n",
-      "}\n",
-      "model {\n",
-      "    eta ~ normal(0, 1);\n",
-      "    y ~ normal(theta, sigma);\n",
-      "}\n",
-      "\"\"\"\n",
-      "\n",
-      "schools_dat = {'J': 8,\n",
-      "               'y': [28,  8, -3,  7, -1,  1, 18, 12],\n",
-      "               'sigma': [15, 10, 16, 11,  9, 11, 10, 18]}\n",
-      "\n",
-      "fit = pystan.stan(model_code=schools_code, data=schools_dat,\n",
-      "                  iter=1000, chains=4)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -176,9 +138,10 @@
       "\n",
       "ndata = 1\n",
       "r, s, _ = generate_popcode_data(ndata, nneuron, kappa_tc, c_50, r_max, \"poisson\", True)\n",
+      "print s[0]\n",
       "\n",
       "neurons_dat = {'N': 121,\n",
-      "               'r': r[0],\n",
+      "               'r': r[0].astype(int),\n",
       "               'sprefs': sprefs,\n",
       "               'c_1': .5,\n",
       "               'c_2': .5,\n",
@@ -193,20 +156,69 @@
      "metadata": {},
      "outputs": [
       {
-       "ename": "RuntimeError",
-       "evalue": "int variable contained non-int values; processing stage=data initialization; variable name=r; base type=int",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-10-4945b7724240>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m fit = pystan.stan(model_code=neurons_code, data=neurons_dat,\n\u001b[0;32m---> 42\u001b[0;31m                   iter=1000, chains=4)\n\u001b[0m",
-        "\u001b[0;32m//anaconda/lib/python2.7/site-packages/pystan/api.pyc\u001b[0m in \u001b[0;36mstan\u001b[0;34m(file, model_name, model_code, fit, data, pars, chains, iter, warmup, thin, init, seed, algorithm, control, sample_file, diagnostic_file, save_dso, verbose, boost_lib, eigen_lib, n_jobs, **kwargs)\u001b[0m\n\u001b[1;32m    383\u001b[0m                      \u001b[0msample_file\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msample_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdiagnostic_file\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdiagnostic_file\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    384\u001b[0m                      \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mverbose\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malgorithm\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0malgorithm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcontrol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcontrol\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 385\u001b[0;31m                      n_jobs=n_jobs, **kwargs)\n\u001b[0m\u001b[1;32m    386\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mfit\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;32m//anaconda/lib/python2.7/site-packages/pystan/model.pyc\u001b[0m in \u001b[0;36msampling\u001b[0;34m(self, data, pars, chains, iter, warmup, thin, seed, init, sample_file, diagnostic_file, verbose, algorithm, control, n_jobs, **kwargs)\u001b[0m\n\u001b[1;32m    684\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Algorithm must be one of {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malgorithms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    685\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 686\u001b[0;31m         \u001b[0mfit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_class\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    687\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    688\u001b[0m         \u001b[0mm_pars\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_param_names\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;32m/var/folders/2p/qvz06jdn5_x7v40bbmgz6wzc0000gr/T/tmpm0krPl/pystan/stanfit4anon_model_58a27eb9e1016bcca9c9e3879dd2bc6d_e8b5c80817b36ec7a0a7f2e78695c4b4.so\u001b[0m in \u001b[0;36mstanfit4anon_model_58a27eb9e1016bcca9c9e3879dd2bc6d_e8b5c80817b36ec7a0a7f2e78695c4b4.StanFit4Model.__cinit__ (/var/folders/2p/qvz06jdn5_x7v40bbmgz6wzc0000gr/T/tmpm0krPl/pystan/stanfit4anon_model_58a27eb9e1016bcca9c9e3879dd2bc6d_e8b5c80817b36ec7a0a7f2e78695c4b4.cpp:7886)\u001b[0;34m()\u001b[0m\n",
-        "\u001b[0;31mRuntimeError\u001b[0m: int variable contained non-int values; processing stage=data initialization; variable name=r; base type=int"
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[ 0.58102754  0.61570284]\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "//anaconda/lib/python2.7/multiprocessing/queues.py:390: UserWarning: Pickling fit objects is an experimental feature!\n",
+        "The relevant StanModel instance must be pickled along with this fit object.\n",
+        "When unpickling the StanModel must be unpickled first.\n",
+        "  return send(obj)\n",
+        "//anaconda/lib/python2.7/multiprocessing/queues.py:390: UserWarning: Pickling fit objects is an experimental feature!\n",
+        "The relevant StanModel instance must be pickled along with this fit object.\n",
+        "When unpickling the StanModel must be unpickled first.\n",
+        "  return send(obj)\n",
+        "//anaconda/lib/python2.7/multiprocessing/queues.py:390: UserWarning: Pickling fit objects is an experimental feature!\n",
+        "The relevant StanModel instance must be pickled along with this fit object.\n",
+        "When unpickling the StanModel must be unpickled first.\n",
+        "  return send(obj)\n",
+        "//anaconda/lib/python2.7/multiprocessing/queues.py:390: UserWarning: Pickling fit objects is an experimental feature!\n",
+        "The relevant StanModel instance must be pickled along with this fit object.\n",
+        "When unpickling the StanModel must be unpickled first.\n",
+        "  return send(obj)\n"
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%matplotlib inline\n",
+      "print r[0]\n",
+      "print s[0]\n",
+      "samps = fit.extract(['s_1', 's_2'])\n",
+      "print np.mean(samps['s_1'])\n",
+      "print np.mean(samps['s_2'])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[ 0.  1.  1.  1.  0.  0.  0.  2.  0.  2.  2.  3.  5.  2.  1.  1.  1.  2.\n",
+        "  0.  2.  0.  0.  2.  1.  0.  0.  0.  1.  0.  1.  1.  0.  1.  0.  0.  0.\n",
+        "  0.  0.  1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+        "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+        "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+        "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  1.  0.  0.  0.  0.\n",
+        "  0.  0.  0.  0.  1.  0.  1.  1.  0.  0.  0.  0.  2.]\n",
+        "[ 0.58102754  0.61570284]\n",
+        "0.637115126861\n",
+        "3.2627023828\n"
+       ]
+      }
+     ],
+     "prompt_number": 25
     },
     {
      "cell_type": "code",
