--- a/Code/Categorization/Variational Inference vs. Deep Learning Categorization.ipynb
+++ b/Code/Categorization/Variational Inference vs. Deep Learning Categorization.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:691e154d15fce66354b0f1891b9bb35650096054ba9308d15cf8c947fa96b186"
+  "signature": "sha256:3dbb46501a6ab3de4ce2f9b2f3767932eeac2a00d883a49737e03b2930203322"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -55,7 +55,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 117
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -125,13 +125,13 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "3.41966666667\n",
-        "2.56133333333\n",
-        "1.84966666667\n"
+        "3.38566666667\n",
+        "2.56533333333\n",
+        "1.833\n"
        ]
       }
      ],
-     "prompt_number": 118
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -436,6 +436,7 @@
       "train_data1 = generate_popcode_data(ndatapergain, nneuron, sig0_sq, sig1_sq, sigtc_sq, 1, \"poisson\")\n",
       "train_data3 = generate_popcode_data(ndatapergain, nneuron, sig0_sq, sig1_sq, sigtc_sq, 3, \"poisson\")\n",
       "train_data15 = generate_popcode_data(ndatapergain, nneuron, sig0_sq, sig1_sq, sigtc_sq, 15, \"poisson\")\n",
+      "print train_data1\n",
       "nn1, _ = train_nn(train_data1, n_hidden=10, learning_rate=.01, n_epochs=100, test_data=(r1, p1, ar1, br1))\n",
       "nn3, _ = train_nn(train_data3, n_hidden=8, learning_rate=.01, n_epochs=100, test_data=(r3, p3, ar3, br3))\n",
       "nn15, _ = train_nn(train_data15, n_hidden=6, learning_rate=.01, n_epochs=100, test_data=(r15, p15, ar15, br15))"
@@ -447,6 +448,14 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
+        "(array([[ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+        "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+        "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+        "       ..., \n",
+        "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+        "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+        "       [ 0.,  0.,  0., ...,  0.,  0.,  0.]]), array([ 0.60394323,  0.37165659,  0.72058484, ...,  0.5945625 ,\n",
+        "        0.69252556,  0.53518757]), array([ 0.06,  0.07,  0.08, ...,  0.02,  0.08,  0.04]), array([ 0.33, -0.63,  0.12, ...,  0.12, -0.24, -0.3 ]))\n",
         "... building the model\n",
         "... training"
        ]
@@ -515,7 +524,7 @@
        ]
       }
      ],
-     "prompt_number": 119
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
