--- a/Code/Demixing/Demixing DNN-Gaussian.ipynb
+++ b/Code/Demixing/Demixing DNN-Gaussian.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:45cd83e970893ae633b4016388c039308ccbc618b2412c0788972b221a99cdb2"
+  "signature": "sha256:66fcd4061d11f1e6950203fa587c6fa9b6e5200f420c8ae1e0e8bd682d319c8d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -67,7 +67,7 @@
       "    r = r_max * (stim_0 + stim_1)\n",
       "    r = r.T\n",
       "    s = np.array((s_0, s_1)).T\n",
-      "    s = s/90\n",
+      "    #s = s/90\n",
       "    c = np.array((c_0, c_1)).T\n",
       "    if noise == \"poisson\":\n",
       "        r = np.random.poisson(r) + 0.0\n",
@@ -76,7 +76,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 42
+     "prompt_number": 79
     },
     {
      "cell_type": "markdown",
@@ -129,10 +129,38 @@
      "prompt_number": 43
     },
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "r, s, c = generate_trainset(3000)\n",
+      "s_0 = s.T[0]\n",
+      "s_1 = s.T[1]\n",
+      "sprefs_data = np.tile(sprefs, (ndata, 1))\n",
+      "s_0t = np.exp(-np.square((np.transpose(np.tile(s_0, (nneuron, 1))) - sprefs_data))/(2 * sigtc_sq))\n",
+      "df_s0 = r_max * c_0 * (s_0/sigtc_sq) * s_0t.T\n",
+      "#df_s0 = c_0 * (s_0/sigtc_sq) * s_0t.T\n",
+      "s_1t = np.exp(-np.square((np.transpose(np.tile(s_1, (nneuron, 1))) - sprefs_data))/(2 * sigtc_sq))\n",
+      "df_s1 = r_max * c_1 * (s_1/sigtc_sq) * s_1t.T"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[ -1.92263001e-01   8.64710384e-02   1.93301276e-01 ...,  -2.80440037e-04\n",
+        "  -4.97101924e-03  -2.84935167e-01]\n"
+       ]
+      }
+     ],
+     "prompt_number": 82
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Generate data used as test set. s_1 and s_2 take on specific values (here 110 and 120) and c_0 and c_1 are set to .5"
+      "Generate data used as test set. s_1 and s_2 take on specific values (here -50 and 15) and c_0 and c_1 are set to .5"
      ]
     },
     {
@@ -183,6 +211,45 @@
       }
      ],
      "prompt_number": 44
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Fisher Information"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "stim_0 = s_0[0]\n",
+      "stim_1 = s_1[0]\n",
+      "contrast_0 = c_0[0]\n",
+      "contrast_1 = c_1[0]\n",
+      "fs_0 = np.exp(-np.square((np.transpose(np.tile(stim_0, (nneuron, 1))) - sprefs))/(2 * sigtc_sq))[0]\n",
+      "qs_0 = r_max * contrast_0 * fs_0\n",
+      "df_s0 = (stim_0/sigtc_sq) * qs_0\n",
+      "fs_1 = np.exp(-np.square((np.transpose(np.tile(stim_1, (nneuron, 1))) - sprefs))/(2 * sigtc_sq))[0]\n",
+      "qs_1 = r_max * contrast_1 * fs_1\n",
+      "df_s1 = (stim_1/sigtc_sq) * qs_1\n",
+      "Q = qs_0 + qs_1\n",
+      "a = df_s0 * Q\n",
+      "fisher = np.dot(a, df_s1)\n",
+      "print fisher"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "-0.00203024061714\n"
+       ]
+      }
+     ],
+     "prompt_number": 103
     },
     {
      "cell_type": "markdown",
@@ -239,6 +306,26 @@
       }
      ],
      "prompt_number": 45
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "np.mean((optimal[0] - s.T[0]) + (optimal[1] - s.T[1]))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 106,
+       "text": [
+        "-34.693446899957522"
+       ]
+      }
+     ],
+     "prompt_number": 106
     },
     {
      "cell_type": "markdown",
