--- a/Notes/Demixing/Divisive Normalization Notes 2.tex
+++ b/Notes/Demixing/Divisive Normalization Notes 2.tex
@@ -20,11 +20,11 @@
 
 \end{tikzpicture}
 \\
-$s_j$ is stimulus j (here drawn from uniform distribution)\\
-$c_j$ is contrast of grating j (here held constant at .5)\\
-$N_{ij}$ is the response of neuron i to grating j\\ 
+$s_1 \sim \text{Unif}(-60, 60)$\\
+$s_2 \sim \text{Unif}(s_1, 60)$\\
+$N_{1, 2}$ is the response of neurons to grating 1, 2\\ 
 (Poisson neurons with Gaussian tuning curves)\\
-$r_i$ is response of neuron i ($\sum_j N_{ij}$)\\
+$r$ is response of neurons ($\sum N$)\\
 \\
 
 \begin{tikzpicture}
