--- a/Code/Demixing/Demixing with Gains.ipynb
+++ b/Code/Demixing/Demixing with Gains.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6c87f5cee38ae4152c035a5c16269d8681b0f1d6a75adfb7daad1b663c57b732"
+  "signature": "sha256:5d7b3a146bab80fa744c456b0138cf268443028d0494c084c27500762883a59b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -31,6 +31,7 @@
       "max_angle = 90\n",
       "sprefs = np.linspace(min_angle, max_angle, nneuron)\n",
       "eps = np.finfo(np.float64).eps\n",
+      "np.random.seed(1234)\n",
       "\n",
       "r_max = 10\n",
       "sigtc_sq = float(10**2)\n",
@@ -40,7 +41,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 40
     },
     {
      "cell_type": "code",
