--- a/Code/Demixing/Demixing DNN Old 2.ipynb
+++ b/Code/Demixing/Demixing DNN Old 2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d57d3559d57717dd79aca39d68c361ecf034fe2237b011309ffb8fcf363c725d"
+  "signature": "sha256:4cbd3fa77c926f85842b28338512e6a55244ac48b6726c8353e1794ce9d58285"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2222,7 +2222,7 @@
       "    return wrapped\n",
       "p_wrapped = wrapper(get_posteriors_c, r)\n",
       "import timeit\n",
-      "print timeit.timeit(gp_wrapped, number=10)"
+      "print timeit.timeit(p_wrapped, number=10)"
      ],
      "language": "python",
      "metadata": {},
