lots of plots n things

--- a/Code/Demixing/Demixing with Gains.ipynb
+++ b/Code/Demixing/Demixing with Gains.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0ddbb9aad30287fd99cbce569aa904ee4b4b5ab3c6cc1a09ad266589d35b87df"
+  "signature": "sha256:887b7bd0431db06ba21a4c5adf7da9229744e31c2bf8197970640d655b8666d0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -449,7 +449,7 @@
       "    else:\n",
       "        nn = MLP(rng=rng, input=x, n_in=n_in, n_hidden=n_hidden, n_out=n_out)\n",
       "\n",
-      "    cost = nn.mse(y)\n",
+      "    cost = nn.negative_log_likelihood(y)\n",
       "    \n",
       "    def RMSprop(cost, params, learning_rate=0.001, rho=0.9, epsilon=1e-6, mu=0, nesterov=False):\n",
       "        gparams = T.grad(cost, params)\n",
