--- a/Code/Demixing/Demixing DNN.ipynb
+++ b/Code/Demixing/Demixing DNN.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:cc4236eee993050608ca056a52ab54998bf3f57fb1f234fa9c1826c3c66ed0b0"
+  "signature": "sha256:37fb03a9246362b04843c973682f6e640460f80cf9cb2df17eced56f5862e6d3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -71,13 +71,6 @@
       "    c_0, c_1 = np.random.rand(2, ndata) * c_range + low\n",
       "    r, s, c = generate_popcode_data(ndata, nneuron, sigtc_sq, c_50, r_max, \"poisson\", True, s_0, s_1, c_0, c_1)\n",
       "    return r, s, c\n",
-      "\n",
-      "def generate_s1set(ndata):\n",
-      "    s_0, s_1 = random_s(ndata, True)\n",
-      "    c_0 = np.ones(ndata)\n",
-      "    c_1 = np.zeros(ndata)\n",
-      "    r, s, c = generate_popcode_data(ndata, nneuron, sigtc_sq, c_50, r_max, \"poisson\", True, s_0, s_1, c_0, c_1)\n",
-      "    return r, s, c\n",
       "    \n",
       "def generate_popcode_data(ndata, nneuron, sigtc_sq, c_50, r_max, noise, sort, s_0, s_1, c_0, c_1):\n",
       "    c_rms = np.sqrt(np.square(c_0) + np.square(c_1))\n",
@@ -117,12 +110,50 @@
       "    s_0 = s_0 * stim_0\n",
       "    s_1 = s_1 * stim_1\n",
       "    r, s, c = generate_popcode_data(ndata, nneuron, sigtc_sq, c_50, r_max, \"poisson\", True, s_0, s_1, c_0, c_1)\n",
-      "    return r, s, c"
+      "    return r, s, c\n",
+      "\n",
+      "def random_c(ndata, ndims, low, high, sort):\n",
+      "    c_range = high - low\n",
+      "    if ndims == 1:\n",
+      "        c = np.random.rand(ndims, ndata)[0] * c_range + low\n",
+      "    c = np.random.rand(ndims, ndata) * c_range + low\n",
+      "    if sort:\n",
+      "        c = np.sort(c, axis=0)\n",
+      "    return c\n",
+      "\n",
+      "def generate_trainset_cat(ndata, low=.3, high=1.3, crange=.5, r_max=10):\n",
+      "    numvec = np.random.binomial(1, .5, size=ndata).astype(int)\n",
+      "    c_0 = random_c(ndata, 1, low, low+crange, True)\n",
+      "    c_1 = random_c(ndata, 1, high, high+crange, True)\n",
+      "    s_0, s_1 = np.random.rand(2, ndata) * 120 - 60\n",
+      "    r, numvec, s, c  = generate_popcode_data_cat(ndata, numvec, nneuron, sigtc_sq, c_50, r_max, \"poisson\", s_0, s_1, c_0, c_1)\n",
+      "    sorted_s = np.sort(s, axis=0)\n",
+      "    y = sorted_s[range(ndata), numvec]\n",
+      "    return r, y, s, c, numvec \n",
+      "    \n",
+      "def generate_popcode_data_cat(ndata, numvec, nneuron, sigtc_sq, c_50, r_max, noise, s_0, s_1, c_0, c_1):\n",
+      "    c0vec = c_0 * np.ones(ndata)\n",
+      "    c1vec = c_1 * numvec\n",
+      "    c_rms = np.sqrt(np.square(c0vec) + np.square(c1vec))\n",
+      "    sprefs_data = np.tile(sprefs, (ndata, 1))\n",
+      "    s_0t = np.exp(-np.square((np.transpose(np.tile(s_0, (nneuron, 1))) - sprefs_data))/(2 * sigtc_sq))\n",
+      "    stim_0 = c0vec/c_rms * s_0t.T\n",
+      "    s_1t = np.exp(-np.square((np.transpose(np.tile(s_1, (nneuron, 1))) - sprefs_data))/(2 * sigtc_sq))\n",
+      "    stim_1 = c1vec/c_rms * s_1t.T\n",
+      "    #r = r_max * (stim_0 + stim_1)/(c_50 + c_rms)\n",
+      "    r = r_max * (stim_0 + stim_1)\n",
+      "    r = r.T\n",
+      "    s = np.array((s_0, s_1)).T\n",
+      "    s = s/90\n",
+      "    c = np.array((c_0, c_1)).T\n",
+      "    if noise == \"poisson\":\n",
+      "        r = np.random.poisson(r) + 0.0\n",
+      "    return r, numvec, s, c "
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 634
+     "prompt_number": 756
     },
     {
      "cell_type": "code",
@@ -461,10 +492,7 @@
       "def shared_dataset(data_xy, borrow=True, no_c=False):\n",
       "        \"\"\" Function that loads the dataset into shared variables\n",
       "        \"\"\"\n",
-      "        if no_c:\n",
-      "            data_x, data_y = data_xy\n",
-      "        else:\n",
-      "            data_x, data_y, _ = data_xy\n",
+      "        data_x, data_y = data_xy[:2]\n",
       "        shared_x = theano.shared(np.asarray(data_x,\n",
       "                                               dtype='float32'),\n",
       "                                 borrow=borrow)\n",
@@ -486,14 +514,9 @@
       "    :param n_epochs: maximal number of epochs to run the optimizer\n",
       "\n",
       "   \"\"\"\n",
-      "    if len(train_dataset) > 2:\n",
-      "        train_set_x, train_set_y, _ = shared_dataset(train_dataset)\n",
-      "        if valid_dataset:\n",
-      "            valid_set_x, valid_set_y, _ = shared_dataset(valid_dataset)\n",
-      "    else:\n",
-      "        train_set_x, train_set_y = shared_dataset(train_dataset, no_c=True)\n",
-      "        if valid_dataset:\n",
-      "            valid_set_x, valid_set_y = shared_dataset(valid_dataset, no_c=True)\n",
+      "    train_set_x, train_set_y = shared_dataset(train_dataset)\n",
+      "    if valid_dataset:\n",
+      "        valid_set_x, valid_set_y = shared_dataset(valid_dataset)\n",
       "\n",
       "    # compute number of minibatches for training, validation and testing\n",
       "    n_train_batches = train_set_x.get_value(borrow=True).shape[0] / batch_size\n",
@@ -668,7 +691,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 716
+     "prompt_number": 758
     },
     {
      "cell_type": "code",
@@ -4631,6 +4654,18 @@
       }
      ],
      "prompt_number": 606
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "td_cat = generate_trainset_cat(20000, low=.3, high=1.3, crange=.5, r_max=10)\n",
+      "vd_cat = generate_trainset_cat(3000, low=.3, high=1.3, crange=.5, r_max=10)\n",
+      "nn_cat, nnx_cat, valid_mse_cat = train_nn(td_cat, valid_dataset=vd_cat, n_hidden=20, learning_rate=.001, n_epochs=100, rho=.9, n_out=1)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
